deploy/k8s/base/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: earbug
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      appProtocol: HTTP
  selector:
    app.kubernetes.io/name: earbug
